--- a/SQL - Chinook Answering Business Questions.ipynb
+++ b/SQL - Chinook Answering Business Questions.ipynb
@@ -2,14 +2,40 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# Chinook: Answering Business Questions Using SQL"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Chinook Project with DataQuest"
+    "In this guided project, we're going to practice using our SQL skills to answer business questions.\n",
+    "Chinook is a sample database available for SQL Server, Oracle, MySQL, etc.  \n",
+    "The data model represents a digital media store, including tables for artists, albums, media tracks, invoices and customers.\n",
+    "\n",
+    "## Summary\n",
+    "- Albums from Meteor and the Girls, Red Tone, and Slim Jim Bites should yield the most sales from the newly signed record label.\n",
+    "- The differences in sales across each agents is roughly explained by their hiring dates.\n",
+    "- USA has generated the most sales over time.\n",
+    "- Countries in 'Other' category should be noted as they make up a significant amount after addition.\n",
+    "- Growth shown in countries with high cus_order_lifetime (high spend), and low total_customers.\n",
+    "- It is not advisable for management to switch their purchasing strategy to only acquire the most popular track, as 57% of invoices are album purchases"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  Lets start by reading in the dataset."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -20,7 +46,7 @@
        "'Connected: None@chinook.db'"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32,15 +58,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Chinook Database Schema"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -132,7 +151,7 @@
        " ('track', 'table', 'CREATE TABLE [track]\\n(\\n    [track_id] INTEGER PRIMARY KEY NOT NULL,\\n    [name] NVARCHAR(200)  NOT NULL,\\n    [album_id] INTEGER,\\n    [media_type_ ... (377 characters truncated) ... ON ON UPDATE NO ACTION,\\n    FOREIGN KEY ([media_type_id]) REFERENCES [media_type] ([media_type_id]) \\n\\t\\tON DELETE NO ACTION ON UPDATE NO ACTION\\n)')]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,34 +170,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ----------------------------------------------------------------------"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## New Record Label\n",
     "\n",
+    "The Chinook record store has just signed a deal with a new record label, and you've been tasked with selecting the first three albums that will be added to the store, from a list of four. All four albums are by artists that don't have any tracks in the store right now - we have the artist names, and the genre of music they produce:\n",
     "\n",
     "| Artist Name | Genre |\n",
     "| --- | --- |\n",
-    "| Regal | Hip-Hop |\n",
+    "|Regal | Hip-Hop |\n",
     "| Red Tone | Punk |\n",
-    "| Meteor and the Girls | Pop |\n",
+    "| Meteor and the Girls | Pop|\n",
     "| Slim Jim Bites | Blues |\n",
     "\n",
     "\n",
-    "## Task: \n",
-    "#### The Chinook record store has just signed a deal with a new record label, and you need to select the first three albums to add to the store, from a list of four. All four albums are by artists who don't have any tracks in the store right now — we have the artists' names and the genre of music they produce:\n",
-    "#### Write a query to find out which genres sell the most tracks in the USA, write up a summary of your findings, and make a recommendation for the three artists whose albums we should purchase for the store."
+    "The record label specializes in artists from the USA, and they have given Chinook some money to advertise the new albums in the USA, so we're interested in finding out which genres sell the best in the USA."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 30,
    "metadata": {
-    "collapsed": false,
-    "scrolled": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -352,13 +363,15 @@
        " ('Opera', 25, None)]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%sql\n",
+    "/* Genres with the most tracks sold in the USA */\n",
+    "\n",
     "SELECT g.name AS genre_name, g.genre_id AS genre_id, SUM(i.quantity) AS number_of_sold_tracks\n",
     "FROM genre g\n",
     "INNER JOIN track t ON g.genre_id = t.genre_id\n",
@@ -371,23 +384,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Analysis:\n",
-    "#### Below is the number of sold tracks by genre.  \n",
-    "#### We can see that Punk, Blues, and Pop are the top three with consideration of the artists we signed.  Therefore, purchasing album's from Red Tone, Slim Jim Bites, Meteor and the Girls in that order should yield the most optimal results."
+    "### Observations\n",
+    "We can see that Punk, Blues, and Pop are the top three with consideration of the artists we signed. Therefore, purchasing album's from Red Tone, Slim Jim Bites, Meteor and the Girls in that order should yield the most optimal results."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ----------------------------------------------------------------------\n",
-    "## Task\n",
-    "#### Chinook store customer gets assigned to a sales support agent within the company when they first make a purchase. Your job is to analyze the purchases of customers belonging to each employee to see if any sales support agent is performing better or worse than the others."
+    "## Sales Support Agents (SSA)\n",
+    "Each customer for the Chinook store gets assigned to a sales support agent within the company when they first make a purchase. You have been asked to analyze the purchases of customers belonging to each employee to see if any sales support agent is performing either better or worse than the others."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -443,13 +454,15 @@
        " (5, 'Steve Johnson', 'Sales Support Agent', 2, '2017-10-17 00:00:00', 1393.92)]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%sql\n",
+    "/* Show all Support Agents and Sales */\n",
+    "\n",
     "SELECT e.employee_id, \n",
     "       e.first_name || ' ' || e.last_name AS 'name', \n",
     "       e.title, e.reports_to, \n",
@@ -465,20 +478,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Analysis: \n",
-    "#### The task requested was to find the total dollar amount of sales assigned to each support agent  and to determine performance.  All SSA's started in the same year, with Jane P. having the most sales followed by Margaret, and Steve.  More metrics can be brought in for analysis such as if any SSA's are showing growth in their sales over time."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Below is a table joining all customer's invoice dates to assigned employees.  We can analyze below to see if SSA's show more sales from a customer after they've been assigned to determine growth"
+    "### Observations\n",
+    "\n",
+    "The task requested was to find the total dollar amount of sales assigned to each support agent and to determine performance. All SSA's started in the same year, with Jane P. having the most sales followed by Margaret, and Steve. The difference may correspond with their hiring dates.  More metrics can be brought in for analysis such as if any SSA's are showing growth in their sales over time.\n",
+    "\n",
+    "Below is a table joining all customer's invoice dates to assigned employees. We can analyze below to see if SSA's show more sales from a customer after they've been assigned to determine other trends."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -575,13 +584,16 @@
        " ('Jane Peacock', 'Edward Francis', '2020-08-02 00:00:00', 10.89)]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%sql\n",
+    "/* Show all invoices respective to each customer and SSAs. Limited to 10 to simplify report. */\n",
+    "/* Raw data could be plotted on a visualization */\n",
+    "\n",
     "SELECT e.first_name || ' ' || e.last_name AS Employee,\n",
     "       c.first_name || ' ' || c.Last_name AS Customer,\n",
     "       i.invoice_date AS 'Invoice Date', \n",
@@ -597,21 +609,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ----------------------------------------------------------------------\n",
-    "## Task: \n",
-    "#### Analyze sales data for customers from each different country.  Because there are a number of countries with only one customer, you should group these customers as \"Other\" in your analysis. Include the following:\n",
-    "#### 1. Where a country has only one customer, collect them into an 'Other' group.\n",
-    "#### 2. The results should sort by the total sales from the highest to lowest, with the 'Other' group at the very bottom.\n",
-    "#### 3. For each country, include: total # of customers, total value of sales, average value of sales per customer, average order value\n",
-    "##### Below is a query used to sort the sales data to satisfy criteria 1, and stage for the next two"
+    "## Sales by Country\n",
+    "Your next task is to analyze the sales data for customers from each different country. You have been given guidance to use the country value from the customers table, and ignore the country from the billing address in the invoice table.\n",
+    "\n",
+    "In particular, you have been directed to calculate data, for each country, on the:\n",
+    "- total number of customers\n",
+    "- total value of sales\n",
+    "- average value of sales per customer\n",
+    "- average order value\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 33,
    "metadata": {
-    "collapsed": false,
-    "scrolled": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -706,13 +718,15 @@
        " ('Canada', 31, 10, 1.98)]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%sql\n",
+    "/* This query used to sort the group the sales data by invoice_id and filter countries with one customer to 'other' */\n",
+    "/* This query is also necessary to stage for the original requested task */\n",
     "\n",
     "SELECT CASE WHEN (\n",
     "                  SELECT COUNT(*)\n",
@@ -730,15 +744,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Final calculcation for sales criteria with above query used"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -846,13 +853,17 @@
        " ('Other', 15, 1094.94, 73.0, 7.45)]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%sql\n",
+    "/* Final Cell to calcualte sales by Country */\n",
+    "\n",
+    "\n",
+    "/* This subquery is the same as the mentioned above query that is necessary */\n",
     "\n",
     "WITH country_other AS\n",
     "(\n",
@@ -869,6 +880,9 @@
     "FROM customer c\n",
     "INNER JOIN invoice i ON c.customer_id = i.customer_id\n",
     ")\n",
+    "\n",
+    "\n",
+    "/* Calculate Sales by Country, with countries with one customer labelled as other and put in 'other' group */\n",
     "\n",
     "SELECT\n",
     "    country,\n",
@@ -890,27 +904,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Analysis:\n",
-    "#### USA has generated the most sales over time, along with having the most customers in one country.  Growth is also shown in countries where cus_order_lifetime is high, while total_customers is low in places such as Czech, India, and Portugal.  Countries categorized in 'other' also make up for a significant amount of sales, and should be noted."
+    "### Observations:\n",
+    "USA has generated the most sales over time, along with having the most customers in one country. Growth is also shown in countries where cus_order_lifetime is high, while total_customers is low in places such as Czech, India, and Portugal. Countries categorized in 'other' also make up for a significant amount of sales, and should be noted."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ----------------------------------------------------------------------\n",
-    "## Task:\n",
-    "##### The Chinook store is setup in a way that allows customer to make purchases in one of the two ways:\n",
-    "##### 1. Purchase an entire album\n",
-    "##### 2. Purchase a collection of one or more individual tracks.\n",
-    "##### The store does not let customers purchase an entire album and then add individual tracks to that same purchase (unless they choose each track manually). When customers purchase albums, the store charges them the same price as if they had purchased each of those tracks separately.\n",
-    "##### Management is currently considering changing their purchasing strategy to save money. The strategy they are considering is to purchase only the most popular tracks from each album from record companies, instead of purchasing every track from an album.\n",
-    "##### Our instructions are to determine what percentage of purchases are individual tracks vs. entire albums so management can use this data to understand the effect this decision might have on overall revenue."
+    "## New Purchasing Strategy\n",
+    "\n",
+    "The Chinook store is setup in a way that allows customer to make purchases in one of the two ways:\n",
+    "\n",
+    "- purchase a whole album\n",
+    "- purchase a collection of one or more individual tracks.\n",
+    "\n",
+    "The store does not let customers purchase a whole album, and then add individual tracks to that same purchase (unless they do that by choosing each track manually). When customers purchase albums they are charged the same price as if they had purchased each of those tracks separately.\n",
+    "\n",
+    "Management are currently considering changing their purchasing strategy to save money. The strategy they are considering is to purchase only the most popular tracks from each album from record companies, instead of purchasing every track from an album.\n",
+    "\n",
+    "We have been asked to find out what percentage of purchases are individual tracks vs whole albums, so that management can use this data to understand the effect this decision might have on overall revenue."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -947,13 +965,15 @@
        "[('No', 264, 0.43), ('Yes', 350, 0.57)]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%sql\n",
+    "/* Subquery selects first track from each invoice */\n",
+    "\n",
     "WITH invoice_first_track AS\n",
     "(\n",
     "SELECT invoice_id, \n",
@@ -961,6 +981,8 @@
     "FROM invoice_line\n",
     "GROUP BY 1\n",
     ")\n",
+    "\n",
+    "/* Determines whether if invoice was an album purchase or not */\n",
     "\n",
     "SELECT Album_purchase,\n",
     "       COUNT(invoice_id) AS 'Number_of_invoices',\n",
@@ -989,12 +1011,23 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
-    "## Analysis\n",
-    "#### Album and non-Album purchases are split 57% and 43% respectively. Management's purchasing strategy of only acquiring the most popular tracks should not be advised, given that 57% of invoices are album purchases."
+    "### Observation\n",
+    "Album and non-Album purchases are split 57% and 43% respectively. Management's purchasing strategy of only acquiring the most popular tracks should not be advised, given that 57% of invoices are album purchases"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary\n",
+    "- Albums from Meteor and the Girls, Red Tone, and Slim Jim Bites should yield the most sales from the newly signed record label.\n",
+    "- The differences in sales across each agents is roughly explained by their hiring dates.\n",
+    "- USA has generated the most sales over time.\n",
+    "- Countries in 'Other' category should be noted as they make up a significant amount after addition.\n",
+    "- Growth shown in countries with high cus_order_lifetime (high spend), and low total_customers.\n",
+    "- It is not advisable for management to switch their purchasing strategy to only acquire the most popular track, as 57% of invoices are album purchases"
    ]
   }
  ],
